force-app/main/default/objects/Transaction_Detail__c/Transaction_Detail__c.object-meta.xml
<CustomObject>
    <label>Transaction Detail</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>