force-app/main/default/objects/Transaction_Detail__c/fields/Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Date__c</fullName>
    <label>Cheque Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>