force-app/main/default/objects/Transaction_Detail__c/fields/Cheque_Issue_Bank__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Issue_Bank__c</fullName>
    <label>Cheque Issue Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>