force-app/main/default/objects/Transaction_Detail__c/fields/E_Com_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>E_Com_Order_Number__c</fullName>
    <label>E-Com Order Number</label>
    <referenceTo>Order_Information__c</referenceTo>
    <relationshipLabel>Transaction Details</relationshipLabel>
    <relationshipName>Transaction_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>