force-app/main/default/objects/Transaction_Detail__c/fields/Payment_Realized_On__c.field-meta.xml
<CustomField>
    <fullName>Payment_Realized_On__c</fullName>
    <label>Payment Realized On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>