force-app/main/default/objects/Transaction_Detail__c/fields/PG_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>PG_Transaction_Id__c</fullName>
    <label>PG Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>